// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example-value-or-externalValue return errors if both externalValue and value 1`] = `
Array [
  Object {
    "code": "example-value-or-externalValue",
    "message": "externalValue and value cannot both be defined",
    "path": Array [
      "example",
    ],
    "range": Object {
      "end": Object {
        "character": 20,
        "line": 3,
      },
      "start": Object {
        "character": 12,
        "line": 1,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Example should have either a \`value\` or \`externalValue\` field.",
  },
]
`;

exports[`example-value-or-externalValue return errors if missing externalValue and value 1`] = `
Array [
  Object {
    "code": "example-value-or-externalValue",
    "message": "externalValue and value cannot both be defined",
    "path": Array [
      "example",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 1,
      },
      "start": Object {
        "character": 12,
        "line": 1,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Example should have either a \`value\` or \`externalValue\` field.",
  },
]
`;
